--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,10 +19,15 @@ en:
         description: "In Ruby on Rails (the framework you are using) SQL queries are usually based on one Model which executes the
                                         query. Joins are made through associations afterwards which will be chosen in the next step."
         success: Successfully set the main model.
+        button_next: Set Associations &raquo;
       associations:
         slide_caption: Associations
         title: Please choose associations for your main model
         description: blabla
         remove_model_warning: If you remove this model, all models connected to it will be removed as well. Continue?
+        button_next: Set Values &raquo;
+        button_prev: &#171; Set Main Model
       values:
         slide_caption: Predefined Values
+        button_prev: &#171;
+        button_next: Finish Query
