added column toggle

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,12 +24,17 @@ en:
         success: Successfully set the main model.
         button_next: Set Associations &raquo;
       associations:
-        slide_caption: Associations
+        slide_caption: Associations and Columns
         title: Please choose associations for your main model
         description: blabla
         remove_model_warning: If you remove this model, all models connected to it will be removed as well. Continue?
-        button_next: Set Values &raquo;
+        button_next: Choose Columns &raquo;
         button_prev: &#171; Set Main Model
+      columns:
+        title: Please choose the columns you'd like to use in your query
+        description: The columns you active in this screen can be used later for conditions.
+        button_next: Set Conditions and Output columns &raquo;
+        button_prev: &#171; Choose Associations
       conditions:
         slide_caption: Conditions
         title: Conditions
