less ajax, again - better wizard process, started step4

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,4 +1,4 @@
-en:
+de:
   query_generator:
     errors:
       model_not_found_or_permissions: The model %{model} does not exist or you don't have the necessary rights to access it.
@@ -27,17 +27,20 @@ en:
         description: blabla
         remove_model_warning: If you remove this model, all models connected to it will be removed as well. Continue?
         button_next: Choose Columns &raquo;
-        button_prev: "&#171; Set Main Model"
+        button_prev: &#171; Set Main Model
       columns:
         title: Please choose the columns you'd like to use in your query
         description: The columns you active in this screen can be used later for conditions.
-        button_next: Set Conditions and Output columns &raquo;
-        button_prev: "&#171; Choose Associations"
+        button_next: Set Conditions &raquo;
+        button_prev: &#171; Choose Associations
       conditions:
         title: Conditions
         description: blabla
-        button_prev: "&#171; Choose Columns"
+        button_prev: &#171; Choose Columns
         button_next: Finish Query
-        columns_table:
-          headers:
-            column_name: Column Name
+        move_right: "&raquo;"
+        move_left: "&#171;"
+        rows:
+          positions: Column Position
+          show: Show
+          custom_name: Output Name
