--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,33 +14,37 @@ en:
       actions: Actions
       primary_key: Primary Key
       belongs_to_key: Key for belongs_to association to %{model}
-      model_table: %{model} (%{table})
+      model_table: "%{model} (%{table})"
     wizard:
       main_model:
         title: Please choose a main model to start your query.
         description: "In Ruby on Rails (the framework you are using) SQL queries are usually based on one Model which executes the
                                         query. Joins are made through associations afterwards which will be chosen in the next step."
         success: Successfully set the main model.
-        button_next: Set Associations &raquo;
+        button_next: "Set Associations &raquo;"
       associations:
         title: Please choose associations for your main model
         description: blabla
         remove_model_warning: If you remove this model, all models connected to it will be removed as well. Continue?
         button_next: Choose Columns &raquo;
-        button_prev: &#171; Set Main Model
+        button_prev: "&#171; Set Main Model"
       columns:
         title: Please choose the columns you'd like to use in your query
         description: The columns you active in this screen can be used later for conditions.
         button_next: Set Conditions &raquo;
-        button_prev: &#171; Choose Associations
+        button_prev: "&#171; Choose Associations"
       conditions:
         title: Conditions
         description: blabla
-        button_prev: &#171; Choose Columns
+        button_prev: "&#171; Choose Columns"
         button_next: Finish Query
         move_right: "&raquo;"
         move_left: "&#171;"
+        order_by_options:
+          asc: ASC
+          desc: DESC
         rows:
           positions: Column Position
           show: Show
           custom_name: Output Name
+          order: Order By
