--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,13 +31,13 @@ en:
       columns:
         title: Please choose the columns you'd like to use in your query
         description: The columns you active in this screen can be used later for conditions.
-        button_next: Set Conditions &raquo;
+        button_next: "Set Conditions &raquo;"
         button_prev: "&#171; Choose Associations"
       conditions:
         title: Conditions
         description: blabla
         button_prev: "&#171; Choose Columns"
-        button_next: Finish Query
+        button_next: "Finish Query &raquo;"
         move_right: "&raquo;"
         move_left: "&#171;"
         order_by_options:
@@ -48,3 +48,8 @@ en:
           show: Show
           custom_name: Output Name
           order: Order By
+      query:
+        title: Query Options
+        description: Some final things
+        button_prev: "&#171; Choose Columns"
+        button_next: Save Query
