--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -27,16 +27,16 @@ de:
         description: blabla
         remove_model_warning: If you remove this model, all models connected to it will be removed as well. Continue?
         button_next: Choose Columns &raquo;
-        button_prev: &#171; Set Main Model
+        button_prev: "&#171; Set Main Model"
       columns:
         title: Please choose the columns you'd like to use in your query
         description: The columns you active in this screen can be used later for conditions.
-        button_next: Set Conditions &raquo;
-        button_prev: &#171; Choose Associations
+        button_next: Set Conditions and Output columns &raquo;
+        button_prev: "&#171; Choose Associations"
       conditions:
         title: Conditions
         description: blabla
-        button_prev: &#171; Choose Columns
+        button_prev: "&#171; Choose Columns"
         button_next: Finish Query
         move_right: "&raquo;"
         move_left: "&#171;"
