--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -85,6 +85,7 @@ en:
           order: Order By
           conditions: Conditions
           preview: Preview
+          group_by: Group By
       query:
         name: Details
         title: Query Options
