--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,11 +33,12 @@ en:
       export: Export
       no_records_returned: Sorry, no records were returned by your query.
       total_row_count: "%{count} rows in total"
+      main_model: Main Model
     wizard:
       main_model:
-        name: Main Model
-        title: Please choose a main model to start your query.
-        description: "Please choose all models you'd like to use in your query. The main model should be the one you use when you formulate the query in words, e.g. 'Give me all MAIN_MODEL with ...'"
+        name: Models
+        title: Please choose the models (tables) you'd like to use in your query.
+        description: "The main model should be the one you use when you formulate the query in words, e.g. 'Give me all MAIN_MODEL with ...'"
         success: Successfully set the main model.
         button_next: "Set Associations &raquo;"
       associations:
