--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,17 +33,17 @@ en:
       export: Export
       no_records_returned: Sorry, no records were returned by your query.
       total_row_count: "%{count} rows in total"
-      main_model: Main Model
+      main_model: Base Model
     wizard:
       main_model:
         name: Models
         title: Please choose the models (tables) you'd like to use in your query.
-        description: "The main model should be the one you use when you formulate the query in words, e.g. 'Give me all MAIN_MODEL with ...'"
+        description: "The base model should be the one you use when you formulate the query in words, e.g. 'Give me all BASEMODEL with ...'"
         success: Successfully set the main model.
         button_next: "Set Associations &raquo;"
       associations:
-        name: Associations
-        title: Please choose associations for your main model
+        name: Joins
+        title: Please choose joins to be used in your query.
         description: blabla
         remove_model_warning: If you remove this model, all models connected to it will be removed as well. Continue?
         remove_model_title: Remove this model from your current query
