--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -35,30 +35,31 @@ en:
       total_row_count: "%{count} rows in total"
       main_model: Base Model
     wizard:
+      cancel: "&otimes; Cancel"
       main_model:
         name: Models
-        title: Please choose the models (tables) you'd like to use in your query.
-        description: "The base model should be the one you use when you formulate the query in words, e.g. 'Give me all BASEMODEL with ...'"
+        title: Choose the models (tables) you'd like to use in your query.
+        description: "The base model is your query's main model and the start of all automatic joins."
         success: Successfully set the main model.
-        button_next: "Set Associations &raquo;"
+        button_next: "Next &raquo;"
       associations:
         name: Joins
-        title: Please choose joins to be used in your query.
-        description: blabla
+        title: Choose automatic joins between the models.
+        description: All automatic join chains have to start with the base model (red).
         remove_model_warning: If you remove this model, all models connected to it will be removed as well. Continue?
         remove_model_title: Remove this model from your current query
         button_next: Choose Columns &raquo;
         button_prev: "&#171; Set Main Model"
       columns:
         name: Columns
-        title: Please choose the columns you'd like to use in your query
-        description: The columns you active in this screen can be used later for conditions.
+        title: Choose columns from your models.
+        description: The columns you activate in this screen can be used later for output, sorting and conditions.
         button_next: "Set Conditions &raquo;"
         button_prev: "&#171; Choose Associations"
       conditions:
-        name: Conditions
-        title: Conditions
-        description: blabla
+        name:  Column Options
+        title: Column Options
+        description: You can customize output and sorting of your query using the following table.
         button_prev: "&#171; Choose Columns"
         button_next: "Finish Query &raquo;"
         move_right: "&raquo;"
@@ -89,7 +90,6 @@ en:
           group_by: Group By
       query:
         name: Details
-        title: Query Options
-        description: Some final things
-        button_prev: "&#171; Choose Columns"
-        button_next: Save Query
+        title: Query Details
+        description: "Give your query a name"
+        button_next: "Save Query &crarr;"
